# GPDGC

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  autogen.sh  configure.ac
build-aux/: clean-autotool-generated-files.sh
doc/: Makefile.am  gpdgc.texi
src/: Makefile.am  broadcast.c  broadcast.h  client.c  client.h  common.c  common.h  consensus.c  consensus.h  gpdgc.h  heardof.c  heardof.h  message.c  message.h  process.c  process.h  server.c  server.h
test/: Makefile.am  check_tests.sh  kill_tests.sh  run_test.sh  run_tests.sh  simple_log_analysis.sh
test/parameters/: all_tests
test/parameters/models/: bs-av-ne  bs-fv-ne  bs-nv-ne  bu-av-ne  bu-fv-ne  bu-nv-ne  cs-av-ne  cs-av-rc  cs-fv-ne  cs-fv-rc  cs-nv-ne  cs-nv-rc  trusted_key_rsa  trusted_key_rsa.pub
test/parameters/processes/: all-corrects  one-corrupted  one-corrupted-and-three-slow  one-corrupted-bis  one-crash  one-crash-and-three-slow  one-crash-and-two-lates  one-crash-bis  one-fakedecider  one-fakedecider-and-three-slow  one-fakedecider-bis  one-malicious  one-malicious-and-three-slow  one-malicious-bis  three-slow  two-crashes
test/parameters/processes/keys/: p0_rsa  p0_rsa.pub  p1_rsa  p1_rsa.pub  p2_rsa  p2_rsa.pub  p3_rsa  p3_rsa.pub  p4_rsa  p4_rsa.pub  p5_rsa  p5_rsa.pub  p6_rsa  p6_rsa.pub  p7_rsa  p7_rsa.pub  p8_rsa  p8_rsa.pub
test/parameters/processes/scenarii/: break  crash  manager  minimal  standard
test/src/: keygen.c  main.c
test/src/behaviors/: corrupted.c  fakedecider.c  malicious.c
